tests/should_succeed/syntax/05_annotations.coma
module M_assume
  use creusot.prelude.Any
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec assume' (b: bool) (return (x: ())) = (! bb0
    [ bb0 = s0 [ s0 = -{[@expl:assertion] b}- s1 | s1 = return {_ret} ] ] [ & _ret: () = Any.any_l () | & b: bool = b ])
    [ return (result: ()) -> {[@stop_split] [@expl:assume ensures] b} (! return {result}) ]
end
module M_assertion
  use creusot.prelude.Any
  
  type t_T
  
  predicate inv_T (_1: t_T)
  
  predicate resolve_T (_1: t_T)
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec assertion_T (x: t_T) (return (x'0: ())) = {[@stop_split] [@expl:assertion 'x' type invariant] inv_T x}
    (! bb0
    [ bb0 = s0
      [ s0 = s1 [ _ck -> (! {[@expl:type invariant] inv_T x} any) ]
      | s1 = -{resolve_T x}- s2
      | s2 = {[@expl:assertion] x = x} s3
      | s3 = return {_ret} ] ] [ & _ret: () = Any.any_l () | & x: t_T = x ])
    [ return (result: ()) -> (! return {result}) ]
end
module M_apair
  use creusot.int.Int64
  use creusot.prelude.Any
  
  type tup2_i64_i64 = { f0: Int64.t; f1: Int64.t }
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec apair (result: Int64.t) (return (x: tup2_i64_i64)) = (! bb0
    [ bb0 = s0 [ s0 = [ &_ret <- { f0 = result; f1 = result } ] s1 | s1 = return {_ret} ] ]
    [ & _ret: tup2_i64_i64 = Any.any_l () | & result: Int64.t = result ])
    [ return (result'0: tup2_i64_i64) -> {[@stop_split] [@expl:apair ensures] let {f0 = fst; f1 = snd} = result'0 in fst
      = snd}
      (! return {result'0}) ]
end
